--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -41,6 +41,12 @@
   <dependencies>
 
     <dependency>
+    <groupId>dev.dominion.ecs</groupId>
+    <artifactId>dominion-ecs-engine</artifactId>
+    <version>0.9.0</version>
+</dependency>
+
+    <dependency>
       <groupId>org.lwjgl</groupId>
       <artifactId>lwjgl</artifactId>
     </dependency>
