--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -40,6 +40,12 @@
 
   <dependencies>
 
+  <dependency>
+    <groupId>org.joml</groupId>
+    <artifactId>joml</artifactId>
+    <version>1.10.8</version>
+</dependency>
+
     <dependency>
     <groupId>dev.dominion.ecs</groupId>
     <artifactId>dominion-ecs-engine</artifactId>
