--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -41,6 +41,11 @@
   <dependencies>
 
   <dependency>
+    <groupId>org.jbox2d</groupId>
+    <artifactId>jbox2d-library</artifactId>
+    <version>2.2.1.1</version>
+</dependency>
+  <dependency>
     <groupId>org.joml</groupId>
     <artifactId>joml</artifactId>
     <version>1.10.8</version>
